------------------------------------------------------------------------
r2171 | gaser | 2023-01-27 13:13:31

Changed paths:
 M CHANGES.txt
 M Contents.m
 M Makefile
 M cat_run.m
 M doc/cat.html
 D git_ci_log

Changed: Updated Makefile for Octave installation.
Fixed:   Shooting caused issues on Octave and I had to set back the limnitation
         to Dartel for Ocatve use.
------------------------------------------------------------------------
r2170 | gaser | 2023-01-26 17:32:29

Changed paths:
 M CHANGES.txt
 M cat_vol_display_label.m
 M doc/index.html
 M templates_MNI152NLin2009cAsym/Tian_Subcortex_S4_7T.csv

Changed: Updated and corrected atlas information for new subcortical atlas in 
         csv file and online documentation.
Changed: Added check to cat_vol_display_label.m if new atlases were not yet 
         installed.         
------------------------------------------------------------------------
r2169 | gaser | 2023-01-26 14:34:04

Changed paths:
 M CHANGES.txt
 M Contents.m
A  cat_vol_addtruecolourimage.m
 M doc/cat.html
 M doc/index.html

Added:   Added function to overlay 2..12 images either as multiple overlay or
         as RGB overlay for up to 3 images.
Changed: Added link to new subcortical atlas.
------------------------------------------------------------------------
r2168 | gaser | 2023-01-26 09:51:10

Changed paths:
 M .gitattributes
 M CHANGES.txt
 M cat_defaults.m
 M cat_vol_glassbrain.m
 M cat_vol_img2mip.m
 M doc/index.html
A  templates_MNI152NLin2009cAsym/Tian_Subcortex_S4_7T.csv
A  templates_MNI152NLin2009cAsym/Tian_Subcortex_S4_7T.nii
A  templates_MNI152NLin2009cAsym/Tian_Subcortex_S4_7T.txt
 M templates_MNI152NLin2009cAsym/templates.man
 M templates_MNI152NLin2009cAsym_1mm/Template_0_GS1mm.nii
 M templates_MNI152NLin2009cAsym_1mm/Template_1_GS1mm.nii
 M templates_MNI152NLin2009cAsym_1mm/Template_2_GS1mm.nii
 M templates_MNI152NLin2009cAsym_1mm/Template_3_GS1mm.nii
 M templates_MNI152NLin2009cAsym_1mm/Template_4_GS1mm.nii
