@@ -3810,6 +3810,9 @@
             <p><u>Local-Global Intrinsic Functional Connectivity Parcellation</u><br>
             Schaefer A, Kong R, Gordon EM, Laumann TO, Zuo XN, Holmes AJ, Eickhoff SB, Yeo BTT. <a href="https://doi.org/10.1093/cercor/bhx179">
             Local-Global Parcellation of the Human Cerebral Cortex from Intrinsic Functional Connectivity MRI.</a> Cereb Cortex. 2018 Sep 1;28(9):3095-3114.</p>
+
+            <p><u>Melborune Subcortical Atlas</u><br>
+            Tian, Y, Margulies, DS, Breakspear, M, Zalesky A. <a href="https://doi.org/10.1038/s41593-020-00711-6">Topographic organization of the human subcortex unveiled with functional connectivity gradients.</a> Nat Neurosci 23: 1421–1432.</p>
             
             
             <!-- ################################################################################# -->
